plugins {
	id 'war'
	id 'java'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'aix.project'
//version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

//sourceSets {
//	main {
//		java.srcDirs = ['src/main/java']
//		resources.srcDirs = ['src/main/resources', 'src/main/webapp']
//	}
//}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect
	implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.3.0'
	// https://mvnrepository.com/artifact/org.opensearch.client/opensearch-rest-high-level-client
	implementation group: 'org.opensearch.client', name: 'opensearch-rest-high-level-client', version: '2.9.0'
	// https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api
	implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
	// https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime
	implementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.14'
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '3.1.5'

	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
